# Computer_Companion

./: .gitignore
companion/: README.md  THIRD_PARTY_NOTICES.md  launch_companion.bat  launch_companion.ps1  main.py  modes.yaml  pyproject.toml  requirements.txt  run.bat  seed_memory.py  setup.bat  test_capture.py  test_dispatch.py  test_full_flow.py  test_launcher.py  test_markdown.py  test_screenshot.py  test_screenshot_attach.py  test_vision.py
companion/adapters/: __init__.py  attachment_processor.py  browser_provider.py  llama_backend.py  model_provider.py  search_provider.py  tool_runner.py
companion/ai/: __init__.py  llm_client.py
companion/audio/: __init__.py  chatterbox_worker.py  stt.py  tts.py
companion/config/: __init__.py  apps.yaml  config.example.yaml  loader.py  personality.yaml  web_apps.yaml
companion/memory/: __init__.py  store.py
companion/scripts/: generate_pet_assets.py  generate_tray_icon.py
companion/tests/: test_launcher.py  test_markdown.py  test_tool_routing.py
companion/tools/: __init__.py  active_window_tracker.py  app_scanner.py  app_search.py  base.py  bench_llm_latency.py  clipboard.py  executor.py  file_search.py  llm_ping.py  registry.py  system_tools.py  timer.py  utility_tools.py  web_research.py  web_search.py  window_tools.py
companion/ui/: __init__.py  animation.py  chat_dock.py  debug_panel.py  dot_matrix.py  hotkeys.py  main_window.py  markdown.py  memory_panel.py  mode_selector.py  overlay.py  pet_surface.py  settings_dialog.py  signals.py  state_manager.py  theme.py  tool_notification.py  tray.py
(+1 files in other folders)
